CS_SBOX_20150209_01/Metadata/unpackaged/objects/SBQQ__PriceAction__c.object
<CustomObject>
    <description>Action that takes place when the parent price rule fires.</description>
    <fields>
        <fullName>SBQQ__Field__c</fullName>
        <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
        <label>Target Field</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount (%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount (Amt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup (%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup (Amt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__ListPrice__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <inlineHelpText>Price rule running this action.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Price Actions</relationshipLabel>
        <relationshipName>PriceActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__SourceVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that sources value for this action.</description>
        <inlineHelpText>Summary variable that sources value for this action.</inlineHelpText>
        <label>Source Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Actions (Source)</relationshipLabel>
        <relationshipName>SourcePriceActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ValueField__c</fullName>
        <description>Name of the field that sources value for this action.</description>
        <inlineHelpText>If the value you want inserted is calculated in another Quote Line field, select the field here.</inlineHelpText>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <inlineHelpText>Enter the value you want inserted into the Target Field when conditions are met.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>